-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.0.0
-
Windows 7, 64
-
46d9b4ee3604e06c69220bfcd9577f58bd97b75b
Similar to https://bugreports.qt-project.org/browse/QTCREATORBUG-11339 I cannot select the certificate in the drop down box, it is not even expanding when clicked.
In difference to 11339 I use the Windows version of QtCreator so I think the LANG setting has no effect on Windows.
The alias exists in my keystore, so this is not the issue.
I tried this with QtCreator 3.01pre and the nightly of today (4 February 14) were the fix of 11339 should be included already.
| For Gerrit Dashboard: QTCREATORBUG-11417 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 81762,1 | Android: Ensure that keytool outputs in english | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |