Android: Ensure that keytool outputs in english

Task-number: QTCREATORBUG-11417
Change-Id: Ie94e1b7c149feda9c25554b5eff5862498dda81d
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>